third_party/move/move-compiler-v2/tests/checking-lang-v1/struct_no_field_list.move
module 0x42::m {

    struct S has copy, drop;

    fun f(_s: S) {
        S
    }
}
